Apply some sonar lint feedback